# Astral

./: .gitignore  LICENSE  Makefile  README.md  astral.ml  astral.opam  dune  dune-project  main.ml  make.sh
src/: Astral.ml  astral.ml  dune  index.mld
src/SL/: HeapSort.ml  HeapSort.mli  InductivePredicate.ml  InductivePredicate.mli  MemoryModel.ml  MemoryModel0.ml  PredicatePreprocessing.ml  SL.ml  SL.mli  SLID.ml  SLID.mli  SL_builtins.ml  SL_builtins.mli  stackHeapModel.ml  stackHeapModel.mli
src/SMT/: SMT.ml  SMT.mli  SMT_sig.mli  Set_sig.mli  modelParser.ml  quantifierElimination.ml  syntax.ml
src/SMT/adapters/: CVC5_adapter.ml  Z3_adapter.ml  adapter.ml  adapter_sig.ml  cvc5_adapter.ml  solver_sig.mli  solver_utils.ml
src/SMT/backends/: CVC5_backend.ml  Z3_backend.ml  backend_sig.mli
src/SSL/: .SSL.ml.swn  RichSyntax.ml  RichSyntax.mli  SSL.ml  SSL.mli  SSLDumper.ml  SSLUtils.ml  predicate_unfolding.ml  predicate_unfolding.mli  stackHeapModel.ml  stackHeapModel.mli
src/backend/: Backend_preprocessor.ml  Bitwuzla_backend.ml  Bitwuzla_backend.mli  Boolector_backend.ml  CVC5_backend.ml  Yices_backend.ml  Z3_backend.ml  Z3_backend.mli  backend_sig.mli  generic_smtlib.ml  modelParser.ml  smtlib_backend_builder.ml  smtlib_backend_builder.mli
src/bounds/: Bounds.ml  Bounds.mli  Interval.ml  Interval.mli  LocationBounds.ml  LocationBounds.mli  LocationBounds0.ml  LocationBounds0.mli  PathBound.ml  PredicateBounds.ml  SL_graph.ml  SL_graph0.ml  SortBound.ml  SortBound.mli  bounds.ml  lengthConstraints.ml  lengthGraph.ml  mustAllocations.ml  mustAllocations.mli
src/inductive_defs/: DependencyGraph.ml  ID.ml  ID_sig.mli  SID.ml  SID0.ml  SmallModels.ml
src/inductive_defs/builtin/: BuiltinBuilder.ml  BuiltinBuilder.mli  DLS.ml  DLS.mli  LS.ml  LS.mli  NLS.ml  NLS.mli  ReachabilityEncoding.ml  ReachabilityEncoding.mli
src/logics/: AST.ml  AST.mli  BaseLogic.ml  Bitvector.ml  Bitvector.mli  Constant.ml  Identifier.ml  Logic.ml  Logic.mli  Logic_sig.mli  Sort.ml  Sort.mli  Variable.ml  Variable.mli
src/model_checker/: modelChecker.ml  modelChecker.mli
src/parser/: HeapParser.ml  Normalisation.ml  Parser.ml  Parser.mli  ParserContext.ml  ParserContext.mli  ParserContext_type.mli  ParserUtils.ml  ParserUtils.mli  parser.ml  parser.mli  smtlibParser.ml  smtlibParser.mli  typeEnvironment.ml  typeEnvironment.mli
src/parsers/: SL_comp.ml  SL_comp.mli  grasshopperTranslator.ml  grasshopper_convertor.ml  slothTranslator.ml  sloth_convertor.ml  smtlibParser.ml  smtlibParser.mli  smtlibPrinter.ml  smtlib_convertor.ml  typeEnvironment.ml  typeEnvironment.mli
src/parsers/convertors/: convertor_sig.amli  grasshopper_convertor.ml  sloth_convertor.ml  smtlib_convertor.ml
src/preprocessing/: AggresiveSimplifier.ml  Antiprenexing.ml  BroomPreprocessing.ml  EqualityRewritter.ml  EqualityRewritter.mli  Inlining.ml  IntroduceIfThenElse.ml  NegationNormalisation.ml  PreciseToImprecise.ml  PreciseToImprecise.mli  PurePreprocessing.ml  PurePreprocessing.mli  Pure_preprocessing.ml  QuantifierElimination.ml  QuantifierElimination.mli  RemoveVariadic.ml  RemoveVariadic.mli  SL_comp.ml  SL_quantifiers.ml  Simplifier.ml  Simplifier.mli  UnfoldIDs.ml
src/random_formulae/: generator.ml  quickCheck.ml
src/solver/: FragmentChecker.ml  FragmentChecker.mli  SolverUtils.ml  api.ml  context.ml  debug.ml  debug.mli  encodings.ml  engine.ml  input.ml  options.ml  options.mli  options_base.ml  options_base.mli  options_sig.mli  preprocessor.ml  preprocessor.mli  results.ml  solver.ml  solver.mli
src/ssl/: LIA.ml  LIA.mli  RichSyntax.ml  SSL.ml  SSL.mli  SSLUtils.ml  predicateUnfolding.ml  predicate_unfolding.ml  predicate_unfolding.mli  stackHeapModel.ml
src/translation/: context_sig.mli  encoding_context_sig.mli  encodings.ml  explicitSolver.ml  quantifierElimination.ml  quantifierEncoding.ml  quantifierEncoding.mli  quantifiers.ml  quantifiers.mli  set_sig.mli  translation.ml  translation.mli  translation_context.ml  translation_context.mli  translation_sig.mli
src/translation/heap_encoding/: ArrayEncoding.ml  ArrayEncoding.mli  HeapEncoding.ml  HeapEncoding.mli  HeapEncoding_sig.mli
src/translation/list_encoding/: listEncoding.ml
src/translation/location_encoding/: BitvectorLocations.ml  DatatypeLocations.ml  DatatypeLocations.mli  LocationBuilder.ml  (+6 more)
src/utils/: Colors.ml  Colors.mli  Result_syntax.ml  ThreeValuedLogic.ml  UnicodeSymbols.ml  UnicodeSymbols.mli  datatype.ml  datatype.mli  datatype_sig.mli  json_output.ml  json_output.mli  list_utils.ml  list_utils.mli  logger.ml  logger.mli  logger_sig.mli  logger_state.ml  prelude.ml  printer.ml  printer.mli  printer_sig.mli  profiler.ml  timer.ml  topped_set.ml  topped_set.mli  utils.ml  utils.mli  z3_utils.ml  z3_utils.mli
tests/: API_tests.ml  BaseLogic_tests.ml  PathBound_tests.ml  SL_tests.ml  SMT.ml  SMT_tests.ml  SSL_tests.ml  Variable_tests.ml  antiprenexing_tests.ml  backend.ml  broom_preprocessor_tests.ml  dune  list_utils.ml  list_utils_tests.ml  model_checker_tests.ml  predicate_unfolding_tests.ml  preprocessing_tests.ml  preprocessors.ml  run.sh  simplification.ml  simplification_tests.ml  topped_set.ml  topped_set_tests.ml
tests/preprocessing/: Antiprenexing_tests.ml  IntroduceITE_tests.ml  Preprocessing_tests.ml  QuantifierElimination_tests.ml  RemoveVariadic_tests.ml  simplification_tests.ml
tests/quickcheck/: symbolic_heaps.ml
tests/testables/: BaseLogic_testable.ml  Builder.ml  Builder.mli  SL_graph_testable.ml  SL_testable.ml  SMT_testable.ml  Testable_sig.mli
tests/utils/: topped_set_tests.ml
(+287 files in other folders)
