opam-version: "2.0"
name: "astral"
version: "0.1"
synopsis: "Decision procedure for strong-separation logic based on translation to SMT"
maintainer: "Tomáš Dacík <xdacik00@stud.fit.vutbr.cz>"
authors: [
    "Tomáš Dacík <idacik@fit.vut.cz>"
    "Adam Rogalewicz <rogalew@fit.vut.cz>"
    "Tomáš Vojnar <vojnar@fit.vut.cz>"
    "Florian Zuleger<florian.zuleger@tuwien.ac.at>"
]
license: "MIT"
homepage: "https://github.com/TDacik/Astral"
dev-repo: "git://github.com/TDacik/Astral.git"
bug-reports: "https://github.com/TDacik/Astral/issues"

depends: [
  "ocaml"
  "dune"
  "batteries"
  "z3"
  "dolmen" {>= "0.7"}
  "ocamlgraph"
  "qcheck"
  "yojson"
  "ppx_compare"
]

build: [
    ["dune" "build"]
]

install: [
    ["dune" "install"]
]
