(data_only_dirs
  benchmarks
  scripts
)

(env
    (dev
        (flags (:standard -w -8    ; Partial pattern-matching
                          -w -32   ; Unused value declaration
                          -w -26   ; Unused var
                          -w -27   ; Unused var strict
                          -g
                )
        )
    )
)
