(library
  (name astral)
  (public_name astral)


  (libraries
    z3
    dolmen
    batteries
    ocamlgraph
    qcheck
    yojson
    ppx_deriving
    ppx_compare
    ppx_inline_test
  )

  (preprocess
    (pps
      ppx_compare
    )
  )

  (modules_without_implementation
    datatype_sig
    logic_sig
    SMT_sig
    backend_sig
    translation_sig
    printer_sig
    PredicateEncoding_sig
    set_sig
    SetEncoding_sig
    location_sig
    context_sig
    HeapEncoding_sig
  )
)

(include_subdirs unqualified)
