(library
  (name astral)
  (public_name astral)


  (libraries
    z3
    dolmen
    batteries
    ocamlgraph
    yojson
    ppx_deriving
  )

  (preprocess
    (pps
      ppx_compare
    )
  )

  (modules_without_implementation
    datatype_sig
    logic_sig
    SMT_sig
    backend_sig
    translation_sig
    logger_sig
    SetEncoding_sig
    location_sig
    encoding_context_sig
    HeapEncoding_sig
    ID_sig

    ParserContext_type
  )
)

(include_subdirs unqualified)

(documentation (package astral))
