(executables
  (names
    SMT_tests
    SSL_tests
    topped_set_tests
    list_utils_tests
    simplification_tests
    preprocessing_tests
    predicate_unfolding_tests
    backend
    antiprenexing_tests
    broom_preprocessor_tests
    model_checker_tests
    symbolic_heaps
  )

  (libraries
    astral_lib
    astral_generator
    alcotest
    qcheck
  )

  (flags
    :standard
    -open Alcotest
    -open Astral_lib
    -open Astral_generator
  )

)

(include_subdirs unqualified)

(rule
  (alias runtest)
  (action (run ./run.sh))
)
